// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $518,132,198.49
  </h1>
</div>
`;

exports[`should correctly render expense summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
